# MBET

./: .gitignore  CMakeLists.txt  README.md  main.cpp
common/: bigraph.hpp  timer.hpp
data/: test.txt  youtube-groupmemberships.txt
src/: MBET.hpp
